Handle finishing of tail processing nodes on the main thread

When a tail processing node is finished processing (because it now
propagates silence), copy the node to another vector.  On the main
thread, process this vector by disabling any outputs.

If this were done on the audio thread, disabling outputs can cause
some handlers to be deleted which also can remove summing junctions.
But summing junctions needed to be deleted in the main thread.

Bug: 828826
Test: Run repro case and observe no crashes after many minutes.
Change-Id: I14acf7f54d621ee83e6ed910a0784ec6a0a34b9d
Reviewed-on: https://chromium-review.googlesource.com/996387
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550075}
Former-commit-id: 5748a5de89a1a5f5072b2e76e33229b1f970dbc7